# OpenGL_3D_Graphics_Engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.bat  build.sh
include/model/: mesh.hpp  model_3d.hpp  shader.hpp
include/render/: camera.hpp  core_components.hpp  draw_components.hpp  keyboard.hpp  mouse.hpp  renderer.hpp
include/shader/: directional_light_shader.hpp  point_light_shader.hpp  shader.hpp  solid_shader.hpp
include/util/: types_enums.hpp
include/window/: window.hpp  window_callbacks.hpp
include/worlds/: default_world.hpp  world.hpp
source/: main.cpp
source/model/: mesh.cpp  model_3d.cpp  shader.cpp
source/render/: camera.cpp  core_components.cpp  draw_components.cpp  keyboard.cpp  mouse.cpp  renderer.cpp
source/shader/: directional_light_shader.cpp  point_light_shader.cpp  shader.cpp  solid_shader.cpp
source/window/: window.cpp  window_callbacks.cpp
source/worlds/: default_world.cpp  world.cpp
